--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ web.imagesPath = file:/${web.imagesSavePath}
 #spring.mvc.static-path-pattern=/**  
 #spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
 #
+
+web.upload-path=G:/ 
+spring.mvc.static-path-pattern=/** 
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
