--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,27 @@
 #  Set
-app.path = 47.106.208.120:9090
-app.path.admin = ${app.path}/admin
-web.imagesSavePath = /usr/local/blog/img
-web.imagesPath = file:/${web.imagesSavePath}
+app.pageSize = 10
 
+#Common
+app.image = images
+
+# Local
 #app.path = http://localhost:9090
-#app.path.admin = http://localhost:9090/admin
-#web.imagesSavePath = D:/temp/
+#app.path.admin = ${app.path}/admin
+#web.imagesSavePath = G:/${app.image}/
 #web.imagesPath = file:/${web.imagesSavePath}
-#web.upload-path=G:/ 
 
-web.upload-path = /usr/local/blog/img
-spring.mvc.static-path-pattern = /** 
+# Service Linux
+app.path = http://47.106.208.120:9090
+app.path.admin = ${app.path}/admin
+web.imagesSavePath = /usr/local/blog/${app.image}/
+web.imagesPath = ${web.imagesSavePath}
+
+
+#UEditor
+#web.upload-path=E:/
+web.upload-path = /usr/local/blog/
+spring.mvc.static-path-pattern=/** 
 spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
+
+spring.http.multipart.maxFileSize=100Mb
+spring.http.multipart.maxRequestSize=1000Mb
