--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,13 @@ server:
   port: 9090
   servlet:
     context-path: /admin
-    
+
+          
 spring:
+  servlet:
+    multipart:
+      max-file-size: 30Mb
+      max-request-size: 30Mb
   application:
     name: /admin
 #  mvc:
@@ -14,17 +19,17 @@ spring:
 
   # 开发时关闭缓存,不然没法看到实时页面
   thymeleaf:
-    cache: false
+    cache: true
     
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    
 #    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-#    username: root
 #    password: root
 
     url: jdbc:mysql://124.161.16.164:11306/db_web_service?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-    username: root
     password: 123456
     
     filters: stat,wall,log4j
