--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ app.image = images
 #web.imagesPath = file:/${web.imagesSavePath}
 
 # Service Linux
-app.path = http://47.106.208.120:9090
+#app.path = http://47.106.208.120:9090
 #app.path = http://localhost:9090
+app.path = http://w17b197823.iok.la
 app.path.admin = ${app.path}/admin
 web.imagesSavePath = /usr/local/blog/${app.image}/
 web.imagesPath = ${web.imagesSavePath}
