--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #  Set
 app.pageSize = 10
+app.MaterialPageSize = 15
 
 #Common
 app.image = images
@@ -11,9 +12,9 @@ app.image = images
 #web.imagesPath = file:/${web.imagesSavePath}
 
 # Service Linux
-#app.path = http://47.106.208.120:9090
+app.path = http://47.106.208.120:9090
 #app.path = http://localhost:9090
-app.path = http://w17b197823.iok.la
+#app.path = http://w17b197823.iok.la
 app.path.admin = ${app.path}/admin
 web.imagesSavePath = /usr/local/blog/${app.image}/
 web.imagesPath = ${web.imagesSavePath}
